[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/bullet2.png" type="Texture" id=1]
[ext_resource path="res://scripts/bullet1.gd" type="Script" id=2]
[ext_resource path="res://scenes/other/bul_par.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.40465
height = 4.75632

[node name="bullet1" type="Area2D"]
scale = Vector2( 1.02164, 0.963736 )
collision_layer = 10
collision_mask = 2147483658
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Particles2D" parent="." instance=ExtResource( 3 )]

[node name="range" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="body_entered" from="." to="." method="_on_bullet1_body_entered"]
[connection signal="timeout" from="range" to="." method="_on_range_timeout"]
